--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,16 @@ body {
 	padding: 50px 0 50px 0;
 }
 
+.featuredTextContainer{
+	background: rgba(42, 112, 173,.81);
+  border-radius: 100px;
+	padding: 24px;
+}
+
+	.boldText{
+		font-weight: bold;
+	}
+
 .learnMoreTitle {
 	text-align: left;
   color: white;
@@ -59,7 +69,7 @@ body {
 
 .learnMore {
 	color: white;
-	margin-left: 50px; 
+	margin-left: 50px;
 }
 
 .blackContainer {
@@ -78,6 +88,14 @@ body {
 
 .smallImage {
 	width: 440px;
+}
+
+.bigImage {
+	width: 515px;
+}
+
+.imageCaption {
+	color: white;
 }
 
 .centerImg {
@@ -160,7 +178,7 @@ a:hover {
 }
 
 /*==========================================================================
-  Misc & Adjust 
+  Misc & Adjust
  ========================================================================== */
 .row {
 	z-index: 9999;
@@ -407,13 +425,13 @@ section.section {
  --- Parallax ---
 ============================= */
 
-#parallax1{	
+#parallax1{
 	background-image: url(../img/parallax/img1.jpg);
 }
-#parallax2{	
+#parallax2{
 	background-image: url(../img/parallax/img2.jpg);
 }
-#testimonials{	
+#testimonials{
 	background-image: url(../img/parallax/img3.jpg);
 }
 /*===========================
@@ -462,7 +480,7 @@ section.section {
 .navbar-nav {
 	float: right;
 	margin-bottom: 0;
-	padding-bottom:0;	
+	padding-bottom:0;
 }
 
 .navbar .navbar-nav > .active > a {
@@ -508,8 +526,9 @@ h1 a.navbar-brand {
 
 section.featured {
 	padding: 200px 0 60px;
-	background: #70B9B0;
+	background-image: url("../img/Philly.jpg");
 	color: #fdfdfd;
+	background-size: cover;
 }
 
 section.featured h2.slogan {
@@ -517,14 +536,14 @@ section.featured h2.slogan {
 	font-size: 48px;
 	font-weight: 900;
 }
-  
+
  /* inner heading */
 section.featured.inner {
 	background: #eee;
 	padding: 150px 0 50px;
 }
-  
-  
+
+
 /* --- Flexslider --- */
 .flexslider {
 	margin: 0;
@@ -627,7 +646,7 @@ section.featured.inner {
 
 .tp-bullets.simplebullets.round .bullet {
 	background: url(../img/bullets-new.png) no-repeat top left;
-}  
+}
 
 .tp-caption.large_bold_white {
 	font-size:60px;
@@ -673,13 +692,13 @@ About
 	box-sizing:border-box;
 	-webkit-border-radius:50%;
 		-moz-border-radius:50%;
-			border-radius:50%;	
+			border-radius:50%;
 	margin: 0 0 20px 0;
 }
 .member-photo img {
 	-webkit-border-radius:50%;
 		-moz-border-radius:50%;
-			border-radius:50%;	
+			border-radius:50%;
 }
 
 .team-detail h4 {
@@ -727,7 +746,7 @@ nav#filter a {
 }
 
 
-.portfolio-items article img {width:100%;} 
+.portfolio-items article img {width:100%;}
 
 .portfolio-item {
 	display: block;
@@ -818,7 +837,7 @@ nav#filter a {
 	font-size: 18px;
 	font-family: Georgia, sans-serif;
 	line-height: 1.5em;
-}	
+}
 
 /*===========================
   --- Contact ----
@@ -1028,7 +1047,7 @@ a.scrollup:hover{
 .social-network a.icoLinkedin:hover {
 	background-color:#007bb7;
 }
-.social-network a.icoRss:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i, 
+.social-network a.icoRss:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i,
 .social-network a.icoGoogle:hover i, .social-network a.icoVimeo:hover i, .social-network a.icoLinkedin:hover i {
 	color:#fff;
 }
@@ -1156,11 +1175,11 @@ Media queries
 	section.featured {
 		padding-top: 80px;
 	}
-	
+
 	.team-member,.col-lg-4 {
 		margin-bottom: 30px;
 	}
-	
+
 	.stats .col-md-3 {
 		margin-bottom: 30px;
 	}
