--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,20 @@ body {
 		display: flex;
 	}
 }
+.textRight {
+	margin-left: 50px;
+}
+
+@media (max-width: 992px) {
+	.imageContainer {
+		flex-direction: column;
+				padding: 20px;
+
+	}
+	.textRight {
+		margin-left: 0px;
+	}
+}
 
 .navButton {
 	cursor: pointer;
@@ -59,7 +73,6 @@ body {
 
 .learnMore {
 	color: white;
-	margin-left: 50px; 
 }
 
 .blackContainer {
@@ -82,7 +95,8 @@ body {
 
 .centerImg {
 	display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .leftAlign {
