--- a/css/style.css
+++ b/css/style.css
@@ -1179,8 +1179,32 @@ Media queries
 		margin-top: 20px;
 	}
 }
-@media (max-width: 767px) {
+@media only screen and (min-width: 763px) and (max-width: 767px) {
+	.collapse {
+		display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border: none;
+    padding: 0px;
+    height: auto !important;
+	}
+	.navbar-toggle {
+		display: none !important;
+	}
+	.fa-bars:before {
+    content: " ";
+	}
+	#containerWrapper {
+		margin-left: 32px;
+	}
+}
+@media (max-width: 762px) {
 
+	.navbar {
+		line-height: 50px;
+		height: 50px;
+	}
 	.navbar.navbar-fixed-top {
 		background-color:rgba(0,0,0,1);
 	}
