Make sure nav always small at small widths and remove black background

--- a/css/style.css
+++ b/css/style.css
@@ -1202,11 +1202,11 @@ Media queries
 @media (max-width: 762px) {
 
 	.navbar {
-		line-height: 50px;
-		height: 50px;
+		line-height: 50px !important;
+		height: 50px !important;
 	}
 	.navbar.navbar-fixed-top {
-		background-color:rgba(0,0,0,1);
+		/*background-color:rgba(0,0,0,1);*/
 	}
 	.navbar .navbar-collapse ul.nav {
 		background-color: #444;
